# exact-cover-rs

./: Cargo.toml  README.md
examples/: multiplicity.rs  pentomino.rs  simple.rs  tetromino.rs  tetromino_multi.rs
src/: callback.rs  dlx.rs  dlx_m.rs  lib.rs  problem.rs  solver.rs  vector.rs
src/dlx/: callback.rs  dlx.rs  dlx_m.rs  mod.rs
src/problems/: mod.rs  polyomino.rs
